--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unicorn": "^45.0.1"
+  },
+  "dependencies": {
+    "zero-fill": "^2.2.4"
   }
 }
