--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-unicorn": "^45.0.1"
+    "eslint-plugin-unicorn": "^45.0.1",
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "zero-fill": "^2.2.4"
