--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
 		"no-plusplus": "off",
 		"no-await-in-loop": "off",
 		"no-restricted-syntax": "off",
+		"no-continue": "off",
 		"import/extensions": ["error", "always"],
 		"import/prefer-default-export": "off"
 	}
