Move txt file extension watching to script command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "dev": "nodemon index.js"
+    "dev": "nodemon -e js,txt index.js"
   },
   "repository": {
     "type": "git",
