--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "got": "^12.5.3",
     "log-symbols": "^5.1.0",
+    "tough-cookie": "^4.1.2",
     "zero-fill": "^2.2.4"
   }
 }
