--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
 		"sourceType": "module"
 	},
 	"rules": {
-		"indent": ["error", "tab"],
+		"indent": ["error", "tab", {"SwitchCase": 1}],
 		"no-tabs": "off",
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
@@ -29,6 +29,7 @@
 		"no-restricted-syntax": "off",
 		"no-continue": "off",
 		"import/extensions": ["error", "always"],
-		"import/prefer-default-export": "off"
+		"import/prefer-default-export": "off",
+		"unicorn/switch-case-braces": "off"
 	}
 }
