--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"dotenv": "^16.3.1",
 		"got": "^13.0.0",
 		"log-symbols": "^6.0.0",
+		"make-dir": "^4.0.0",
 		"tough-cookie": "^4.1.3",
 		"zero-fill": "^2.2.4"
 	},
