--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"homepage": "https://github.com/knutkirkhorn/advent-of-code#readme",
 	"dependencies": {
+		"@knutkirkhorn/gcd": "^2.0.0",
 		"dotenv": "^16.3.1",
 		"got": "^14.0.0",
 		"log-symbols": "^6.0.0",
