--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
 		"eslint:recommended",
 		"airbnb-base",
 		"plugin:import/recommended",
-		"plugin:unicorn/recommended"
+		"plugin:unicorn/recommended",
+		"prettier"
 	],
 	"parserOptions": {
 		"ecmaVersion": 2023,
