--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
 		"zero-fill": "^2.2.4"
 	},
 	"devDependencies": {
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.0",
 		"eslint": "^8.54.0",
 		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-unicorn": "^49.0.0",
-		"nodemon": "^3.0.1"
+		"nodemon": "^3.0.1",
+		"prettier": "^3.4.1"
 	}
 }
