--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "eslint .",
+		"format:check": "prettier . --check",
 		"dev": "nodemon -e js,txt index.js"
 	},
 	"repository": {
