--- a/package.json
+++ b/package.json
@@ -35,21 +35,21 @@
 	"homepage": "https://github.com/knutkirkhorn/advent-of-code#readme",
 	"dependencies": {
 		"@knutkirkhorn/gcd": "^2.0.0",
-		"dotenv": "^16.3.1",
-		"got": "^14.0.0",
+		"dotenv": "^17.2.3",
+		"got": "^14.6.5",
 		"log-symbols": "^6.0.0",
 		"make-dir": "^4.0.0",
 		"tough-cookie": "^4.1.3",
 		"zero-fill": "^2.2.4"
 	},
 	"devDependencies": {
-		"@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-		"eslint": "^8.54.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-import": "^2.29.0",
-		"eslint-plugin-unicorn": "^49.0.0",
-		"nodemon": "^3.0.1",
-		"prettier": "^3.4.1"
+		"@eslint/js": "^9.39.1",
+		"@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+		"eslint": "^9.39.1",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-unicorn": "^62.0.0",
+		"globals": "^16.5.0",
+		"nodemon": "^3.1.11",
+		"prettier": "^3.7.4"
 	}
 }
